gcc/testsuite/gcc.dg/noncompile/930622-1.c
f ()
{
  double b;
  b = b * 10;
  goto c;	/* { dg-error "used but not defined" } */
}
